// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton Component has correct :active background-color for bgType 1`] = `
.c0 {
  background-color: #48cfad;
  border: none;
  color: white;
  padding: 12px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  margin-right: 2px;
}

.c0:hover {
  background-color: #37bc9b;
}

.c0:focus {
  outline: 0;
}

.c0:active {
  background-color: #ccd1d9;
}

<button
  className="c0"
>
  Button Text
</button>
`;

exports[`StyledButton Component has correct default styles 1`] = `
.c0 {
  background-color: #ccd1d9;
  border: none;
  color: white;
  padding: 12px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  margin-right: 2px;
}

.c0:hover {
  background-color: #aab2bd;
}

.c0:focus {
  outline: 0;
}

.c0:active {
  background-color: #5d9cec;
}

<button
  className="c0"
>
  Button Text
</button>
`;
